header not fixed on mobiles, landing button reposition

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,6 +10,10 @@
   @media (max-width: 1144px) {
     left: 16px;
   }
+
+  @media (max-width: 420px) {
+    position: absolute;
+  }
 }
 
 .content {
