--- a/src/components/Landing/styles.module.scss
+++ b/src/components/Landing/styles.module.scss
@@ -1,5 +1,5 @@
 .Hero {
-  position: relative;
+  //position: relative;
   height: 100vh;
   padding: 32px 0;
 
